--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>my-project</title>
+    <title>蓝鲸淘</title>
   </head>
   <style media="screen">
-  
+
   </style>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
   </body>
 </html>
